added widget to show user current tasks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,16 @@
                 <data android:host="com.jcr.sharedtasks" android:scheme="https"/>
             </intent-filter>
         </activity>
+        <receiver android:name=".widget.TasksListWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/tasks_widget_info" />
+        </receiver>
+        <service android:name=".widget.TasksListWidgetService"/>
     </application>
 
 </manifest>
