--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,9 +52,6 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$persistence_version"
     annotationProcessor "android.arch.persistence.room:compiler:$persistence_version"
 
-    // Picasso
-    implementation "com.squareup.picasso:picasso:$picasso_version"
-
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
 
@@ -76,6 +73,7 @@ dependencies {
     implementation "com.jakewharton.timber:timber:$timber_version"
 
     // Test
+    testImplementation "junit:junit:$junit_version"
     androidTestImplementation "junit:junit:$junit_version"
     androidTestImplementation "com.android.support:support-annotations:$support_version"
     androidTestImplementation "com.android.support.test:runner:$support_test_version"
@@ -86,6 +84,9 @@ dependencies {
 
     // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:$persistence_version"
+
+    // Mockito
+    testImplementation "org.mockito:mockito-core:$mockito_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
