--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ ext.support_version = "27.1.0"
 ext.constraint_layout_version = "1.1.2"
 ext.junit_version = "4.12"
 ext.support_test_version = "1.0.0"
-ext.picasso_version = "2.5.2"
+ext.mockito_version = "2.7.6"
 ext.gson_version = "2.8.5"
 ext.dagger_version = "2.15"
 ext.firebase_version = "16.0.1"
