--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,13 @@
                 android:resource="@xml/tasks_widget_info" />
         </receiver>
         <service android:name=".widget.TasksListWidgetService"/>
+        <service
+            android:name=".sync.SyncDataFirebaseJobService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
