--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,6 @@ ext.mockito_version = "2.7.6"
 ext.gson_version = "2.8.5"
 ext.dagger_version = "2.15"
 ext.firebase_version = "16.0.1"
+ext.firebase_jobdispatcher_version = "0.8.5"
 ext.firebase_ui_version = "3.3.1"
 ext.timber_version = "4.7.1"
