--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.lifecycle_version = "1.1.1"
+    ext.persistence_version = "1.1.1"
+    ext.support_version = "27.1.0"
+    ext.constraint_layout_version = "1.1.2"
+    ext.junit_version = "4.12"
+    ext.support_test_version = "1.0.0"
+    ext.mockito_version = "2.7.6"
+    ext.gson_version = "2.8.5"
+    ext.dagger_version = "2.15"
+    ext.firebase_version = "16.0.1"
+    ext.firebase_jobdispatcher_version = "0.8.5"
+    ext.firebase_ui_version = "3.3.1"
+    ext.timber_version = "4.7.1"
+    ext.kotlin_version = '1.2.70'
+
     repositories {
         google()
         jcenter()
@@ -9,6 +23,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'com.google.gms:google-services:4.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,17 +40,3 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
-ext.lifecycle_version = "1.1.1"
-ext.persistence_version = "1.1.1"
-ext.support_version = "27.1.0"
-ext.constraint_layout_version = "1.1.2"
-ext.junit_version = "4.12"
-ext.support_test_version = "1.0.0"
-ext.mockito_version = "2.7.6"
-ext.gson_version = "2.8.5"
-ext.dagger_version = "2.15"
-ext.firebase_version = "16.0.1"
-ext.firebase_jobdispatcher_version = "0.8.5"
-ext.firebase_ui_version = "3.3.1"
-ext.timber_version = "4.7.1"
