--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     signingConfigs {
@@ -48,11 +49,11 @@ dependencies {
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
+    kapt "android.arch.lifecycle:compiler:$lifecycle_version"
 
     // Room
     implementation "android.arch.persistence.room:runtime:$persistence_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$persistence_version"
+    kapt "android.arch.persistence.room:compiler:$persistence_version"
 
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
@@ -60,8 +61,8 @@ dependencies {
     //Dagger
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     //Firebase
     implementation "com.google.firebase:firebase-core:$firebase_version"
@@ -74,8 +75,11 @@ dependencies {
     // FirebaseUI
     implementation "com.firebaseui:firebase-ui-auth:$firebase_ui_version"
 
-    //Timber
+    // Timber
     implementation "com.jakewharton.timber:timber:$timber_version"
+
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Test
     testImplementation "junit:junit:$junit_version"
@@ -96,9 +100,6 @@ dependencies {
 
     // Mockito
     testImplementation "org.mockito:mockito-core:$mockito_version"
-
-    // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
