--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,21 +49,21 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:recyclerview-v7:$support_version"
-    implementation "com.android.support:preference-v7:$support_version"
-    implementation "com.android.support:cardview-v7:$support_version"
-    implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
 
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    kapt "android.arch.lifecycle:compiler:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
 
     // Room
-    implementation "android.arch.persistence.room:runtime:$persistence_version"
-    kapt "android.arch.persistence.room:compiler:$persistence_version"
+    implementation 'androidx.room:room-runtime:2.1.0-alpha01'
+    kapt 'androidx.room:room-compiler:2.1.0-alpha01'
 
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
@@ -94,19 +94,19 @@ dependencies {
     // Test
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "junit:junit:$junit_version"
-    androidTestImplementation "com.android.support:support-annotations:$support_version"
-    androidTestImplementation "com.android.support.test:runner:$support_test_version"
-    androidTestImplementation "com.android.support.test:rules:$support_test_version"
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.annotation:annotation:1.0.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
+    androidTestImplementation 'androidx.test:rules:1.1.0-beta02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
     androidTestImplementation "org.mockito:mockito-core:$mockito_version"
     androidTestImplementation "org.mockito:mockito-android:$mockito_version"
-    androidTestImplementation "android.arch.core:core-testing:$lifecycle_version"
+    androidTestImplementation 'androidx.arch.core:core-testing:2.0.0'
 
     // Test helpers for LiveData
-    testImplementation "android.arch.core:core-testing:$lifecycle_version"
+    testImplementation 'androidx.arch.core:core-testing:2.0.0'
 
     // Test helpers for Room
-    testImplementation "android.arch.persistence.room:testing:$persistence_version"
+    testImplementation 'androidx.room:room-testing:2.1.0-alpha01'
 
     // Mockito
     testImplementation "org.mockito:mockito-core:$mockito_version"
