--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,13 @@ buildscript {
     ext.support_test_version = "1.0.0"
     ext.mockito_version = "2.22.0"
     ext.gson_version = "2.8.5"
-    ext.dagger_version = "2.15"
-    ext.firebase_version = "16.0.1"
+    ext.dagger_version = "2.21"
+    ext.firebase_core_version = "16.0.7"
+    ext.firebase_version = "16.1.0"
     ext.firebase_jobdispatcher_version = "0.8.5"
     ext.firebase_ui_version = "3.3.1"
     ext.timber_version = "4.7.1"
-    ext.kotlin_version = '1.2.70'
+    ext.kotlin_version = '1.3.21'
     ext.espresso_version = "3.1.0-alpha3"
 
     repositories {
@@ -22,8 +23,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
-        classpath 'com.google.gms:google-services:4.0.0'
+        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.google.gms:google-services:4.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
 
