--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,11 @@ android {
             storePassword 'udacity2018'
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 31
     defaultConfig {
         applicationId "com.jcr.sharedtasks"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion 23
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "com.jcr.sharedtasks.util.SharedTasksTestRunner"
@@ -49,19 +49,20 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
     // ViewModel and LiveData
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    kapt "androidx.lifecycle:lifecycle-common-java8:2.4.1"
 
     // Room
-    implementation 'androidx.room:room-runtime:2.1.0-alpha04'
-    kapt 'androidx.room:room-compiler:2.1.0-alpha04'
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
@@ -74,8 +75,8 @@ dependencies {
 
     //Firebase
     implementation "com.google.firebase:firebase-core:$firebase_core_version"
-    implementation "com.google.firebase:firebase-database:$firebase_version"
-    implementation "com.google.firebase:firebase-auth:$firebase_version"
+    implementation "com.google.firebase:firebase-database:$firebase_database_version"
+    implementation "com.google.firebase:firebase-auth:$firebase_auth_version"
 
     // FirebaseJobDispatcher
     implementation "com.firebase:firebase-jobdispatcher:$firebase_jobdispatcher_version"
@@ -105,7 +106,7 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.0.0'
 
     // Test helpers for Room
-    testImplementation 'androidx.room:room-testing:2.1.0-alpha01'
+    testImplementation "androidx.room:room-testing:$room_version"
 
     // Mockito
     testImplementation "org.mockito:mockito-core:$mockito_version"
