--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +27,9 @@
                 <data android:host="com.jcr.sharedtasks" android:scheme="https"/>
             </intent-filter>
         </activity>
-        <receiver android:name=".widget.TasksListWidgetProvider">
+        <receiver
+            android:name=".widget.TasksListWidgetProvider"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -35,7 +38,9 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/tasks_widget_info" />
         </receiver>
-        <service android:name=".widget.TasksListWidgetService"/>
+        <service
+            android:name=".widget.TasksListWidgetService"
+            android:exported="false"/>
         <service
             android:name=".sync.SyncDataFirebaseJobService"
             android:exported="false">
