--- a/build.gradle
+++ b/build.gradle
@@ -10,21 +10,23 @@ buildscript {
     ext.mockito_version = "2.22.0"
     ext.gson_version = "2.8.5"
     ext.dagger_version = "2.21"
-    ext.firebase_core_version = "16.0.7"
-    ext.firebase_version = "16.1.0"
+    ext.firebase_core_version = "21.0.0"
+    ext.firebase_database_version = "20.0.5"
+    ext.firebase_auth_version = "21.0.5"
     ext.firebase_jobdispatcher_version = "0.8.5"
     ext.firebase_ui_version = "3.3.1"
     ext.timber_version = "4.7.1"
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = "1.6.21"
     ext.espresso_version = "3.1.0-alpha3"
+    ext.room_version = "2.4.2"
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.google.gms:google-services:4.3.10'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
 
